--- a/Js/DigIt!/main.html
+++ b/Js/DigIt!/main.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="icons/logo.webp" type="image/webp" />
-    <title>Dig It! - Version 3.1.0 📖🚀</title>
+    <title>Dig It! - Version 3.2.0 📊💯</title>
   </head>
   <body>
     <!-- Sound button for muting/unmuting sounds -->
@@ -21,6 +21,11 @@
       <div class="patch-notes">
         <h3>Patch Notes</h3>
         <ul>
+          <li>
+            <b>Version 3.2.0 📊</b><br />📊 Added a small index showcasing some
+            nice informations <br />
+            💯% Added a max button for quick dig budget
+          </li>
           <li>
             <b>Version 3.1.0 📖📈</b><br />📖 Added a small tutorial at the
             beginning of the game <br />🚀 Improved early game progression
@@ -141,6 +146,7 @@
           >
             ⚡ Quick Dig
           </button>
+          <button class="max" onclick="insertMaxBudget()">MAX</button>
           <div id="indexDisplay" class="index-panel"></div>
         </div>
       </div>
