resolved some ethical stuff

--- a/Js/DigIt!/main.html
+++ b/Js/DigIt!/main.html
@@ -22,6 +22,13 @@
         <h3>Patch Notes</h3>
         <ul>
           <li>
+            <b>The End?</b>
+            <br />
+            This project is archived and no longer maintained. Some elements may
+            not align with my current ethical standards, but it is shared here
+            strictly to demonstrate technical skills
+          </li>
+          <li>
             <b>Version 3.2.0 📊</b><br />📊 Added a small index showcasing some
             nice informations <br />
             💯% Added a max button for quick dig budget
